--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -1,7 +1,7 @@
 :root {
-  --color-primary: #134074;
-  --color-primary-light: #1b5e9e;
-  --color-primary-dark: #0c2c4b;
+  --color-primary: #ff0000;
+  --color-primary-light: #ff4747;
+  --color-primary-dark: #c70000;
 
   --color-secondary: #eef4ed;
   --color-secondary-light: #ffffff;
@@ -11,15 +11,24 @@
   --color-accent-light: #ffea9e;
   --color-accent-dark: #c78300;
 
-  --background: #f0f2f5;
-  --background-header: #ffffff;
+  --background: #f5f5f5;
+  --background-light: #ffffff;
+  --background-dark: #e9e9e9;
+
   --border-color: #e5e6eb;
+
+  --border-radius: 4px;
   --border: 1px solid var(--border-color);
-  --box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+  --border-hover: 1px solid var(--border-color);
+  --border-focus: 1px solid var(--color-primary);
+
+  --box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.05);
+  --box-shadow-hover: 0px 2px 2px rgba(0, 0, 0, 0.1);
+  --box-shadow-focus: 0px 2px 2px rgba(0, 0, 0, 0.15);
 
   --text-color: #000000;
   --text-color-light: #ffffff;
-  --text-color-dark: #000000;
+  --text-color-dark: #d6d6d6;
 }
 
 :root [data-theme="dark"] {
