--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -12,10 +12,16 @@
   font-size: 16px;
 }
 html {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
 }
 body {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
 }
 blockquote,
 dl,
