--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -13,7 +13,7 @@
 
   --background: #f5f5f5;
   --background-light: #ffffff;
-  --background-dark: #e9e9e9;
+  --background-dark: #202020;
 
   --border-color: #e5e6eb;
 
