:art: refactor: update color variables in CSS files

--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -26,10 +26,10 @@
   --box-shadow-hover: 0px 2px 2px rgba(0, 0, 0, 0.1);
   --box-shadow-focus: 0px 2px 2px rgba(0, 0, 0, 0.15);
 
-  --text-color: #000000;
-  --text-color-alt: #4a4a4a;
-  --text-color-light: #ffffff;
-  --text-color-dark: #d6d6d6;
+  --color-text: #000000;
+  --color-text-alt: #4a4a4a;
+  --color-text-light: #ffffff;
+  --color-text-dark: #d6d6d6;
 }
 
 :root [data-theme="dark"] {
