--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -1,4 +1,7 @@
 :root {
+  --color-light: #ffffff;
+  --color-dark: #202020;
+
   --color-primary: #ff0000;
   --color-primary-light: #ff4747;
   --color-primary-dark: #c70000;
@@ -10,6 +13,24 @@
   --color-accent: #f7b32b;
   --color-accent-light: #ffea9e;
   --color-accent-dark: #c78300;
+
+  --color-text: #000000;
+  --color-text-alt: #4a4a4a;
+  --color-text-light: #ffffff;
+  --color-text-dark: #d6d6d6;
+
+  --space-small: 5px;
+  --space-medium: 10px;
+  --space-large: 20px;
+  --space-xlarge: 40px;
+  --space-x2large: 60px;
+
+  --space-vertical: var(--space-x2large);
+  --space-horizontal: var(--space-xlarge);
+
+  --breakpoint-desktop: 1200px;
+  --breakpoint-tablet: 900px;
+  --breakpoint-mobile: 600px;
 
   --background: #f5f5f5;
   --background-light: #ffffff;
@@ -25,15 +46,24 @@
   --box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.05);
   --box-shadow-hover: 0px 2px 2px rgba(0, 0, 0, 0.1);
   --box-shadow-focus: 0px 2px 2px rgba(0, 0, 0, 0.15);
-
-  --color-text: #000000;
-  --color-text-alt: #4a4a4a;
-  --color-text-light: #ffffff;
-  --color-text-dark: #d6d6d6;
 }
 
 :root [data-theme="dark"] {
   --background: #000000;
+}
+
+@media screen and (max-width: 900px) {
+  :root {
+    --space-vertical: var(--space-xlarge);
+    --space-horizontal: var(--space-large);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  :root {
+    --space-vertical: var(--space-large);
+    --space-horizontal: var(--space-medium);
+  }
 }
 
 html {
