--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -13,15 +13,13 @@
 }
 html {
   display: flex;
+  height: 100%;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
 }
 body {
   display: flex;
+  height: 100%;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
 }
 blockquote,
 dl,
@@ -85,4 +83,9 @@ textarea {
 [type="submit"],
 button {
   -webkit-tap-highlight-color: transparent;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
