--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -1,6 +1,7 @@
 :root {
   --color-light: #ffffff;
   --color-dark: #202020;
+  --color-alt: #383838;
 
   --color-primary: #ff0000;
   --color-primary-light: #ff4747;
