:art: refactor: update primary color variables

--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -3,9 +3,9 @@
   --color-dark: #202020;
   --color-alt: #383838;
 
-  --color-primary: #ff0000;
-  --color-primary-light: #ff4747;
-  --color-primary-dark: #c70000;
+  --color-primary: #ff3838;
+  --color-primary-light: #ff6c6c;
+  --color-primary-dark: #f02c2c;
 
   --color-secondary: #eef4ed;
   --color-secondary-light: #ffffff;
