--- a/src/css/globals.css
+++ b/src/css/globals.css
@@ -13,12 +13,12 @@
 }
 html {
   display: flex;
-  height: 100%;
+  min-height: 100vh;
   flex-direction: column;
 }
 body {
+  min-height: 100vh;
   display: flex;
-  height: 100%;
   flex-direction: column;
 }
 blockquote,
