--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -1,7 +1,7 @@
 :root {
   --color-light: #ffffff;
   --color-dark: #202020;
-  --color-alt: #383838;
+  --color-alt: #444444;
 
   --color-primary: #ff3838;
   --color-primary-light: #ff6c6c;
@@ -16,7 +16,7 @@
   --color-accent-dark: #c78300;
 
   --color-text: #000000;
-  --color-text-alt: #4a4a4a;
+  --color-text-alt: #979797;
   --color-text-light: #ffffff;
   --color-text-dark: #d6d6d6;
 
@@ -39,20 +39,20 @@
   --max-content-width: 1200px;
 
   --background: #f5f5f5;
-  --background-alt: #383838;
+  --background-alt: #252525;
   --background-light: #ffffff;
   --background-dark: #181818;
 
-  --border-color: #e5e6eb;
+  --border-color: #d6d6d6;
 
   --border-radius: 4px;
   --border: 1px solid var(--border-color);
   --border-hover: 1px solid var(--border-color);
   --border-focus: 1px solid var(--color-primary);
 
-  --box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.05);
-  --box-shadow-hover: 0px 2px 2px rgba(0, 0, 0, 0.1);
-  --box-shadow-focus: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  --box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.05);
+  --box-shadow-hover: 0px 2px 8px rgba(0, 0, 0, 0.1);
+  --box-shadow-focus: 0px 2px 8px rgba(0, 0, 0, 0.15);
 }
 
 :root [data-theme="dark"] {
