:art: chore: update primary color variables

--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -3,9 +3,9 @@
   --color-dark: #202020;
   --color-alt: #444444;
 
-  --color-primary: #ff3838;
-  --color-primary-light: #ff6c6c;
-  --color-primary-dark: #f02c2c;
+  --color-primary: #fc4343;
+  --color-primary-light: #ff8585;
+  --color-primary-dark: #eb3838;
 
   --color-secondary: #eef4ed;
   --color-secondary-light: #ffffff;
